# blueprint

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
blueprint/: main.py  secret.py
docs/: index.md  installation.md  usage.md
installation/: index.html
overrides/partials/: footer.html
search/: search_index.json
tests/: test_blueprint.py
usage/: index.html
